@@ -40,14 +40,24 @@ EBUILD php-5.5.21.ebuild 22327 SHA256 7d689ea76263637e3341ae8ac9edb86e9a81cb333f
 EBUILD php-5.5.22.ebuild 22328 SHA256 f6ee29310987166804c66f82d788f2e9514e186f2ad5952f5c3fdecb059d6cd3 SHA512 5faf08fc08056c5791d601807bad614c66d7e0f826f050c300b5f7b773a56e56fadfcc41e4beab628525d96c901c6fc4e951aa0823243fb5d8372dda9676a3d9 WHIRLPOOL 88872e84e2856e8619a92064fb90295de7ede74cad8daaea00bd007ff6470458cf6847b760d16ff080b743d8be497bd0d407de90691802b064409398c20f21ae
 EBUILD php-5.6.4.ebuild 22318 SHA256 27aa7ce3432dca3ab4f7f78081109858f370de55380c273c8418355bce899bd9 SHA512 393d7aa225d3e0579994c963a668f71d54030f603d867c1e9a54a9cb1ed175b9dee5ce3052e01e2513efaf6ad5b20111a84aaee7217186b2467224e8c1f434d4 WHIRLPOOL 95522df7cfa84cd58976e27f2a06087360a68125b10e17b6e1d79051af2a59fde34807d3eafe4f6675595f24d4070c983d27075139805d7e83ad436237eb202b
 EBUILD php-5.6.5.ebuild 22335 SHA256 3b7a2087362fbe9397e6ecd662460d6447199557f4ca619d87e6a5eec9906cfc SHA512 09b855e50694941c26b32426b1f9576b9654b25425109dabf67f9e9fa07b54149f43a9b95a39c8fd393990aeb86e0acf76230a5b1e25ac2610a077e4b18afb82 WHIRLPOOL 65a320335124a0dc48ca3d9dc8de36b052bf5b2af60e21ca058dd93cb0aaa9781f8e09b925788e7b081b9e11164e249c9b8dd33f5cd22054a874d49c69629cbb
-EBUILD php-5.6.6.ebuild 22335 SHA256 bee5e548360ef6ef8269a1cd5daab09f78959296d577ea5ddf77887a7d7adfff SHA512 2a3838206508a9dbbcb3f8aa9b4a1f9fc4e89cf013dae76f3e6ae118607edbd4464da7956d08a40db3da0bc635b23a731dea51594a620bf000d507d2a6489f49 WHIRLPOOL 531df0ed67c6e59bcfee6bc30c003e08997561239f9c89da569f935865009ea02ed46c1ec14092d7dd515b6693235f35966788c89dee01ef5244a39ae48f0fc8
-MISC ChangeLog 38602 SHA256 124483ff94fc587fcd1f7c1bff65159474d03bbf8bfb2a1ac3552c03498a9845 SHA512 9f1ae6662cc5b61c21792e33f4576f73e32235fa49260350b3be3e18d7648a7a7800d263cc5a878c2077a3ec1b2b499dea5ede0d31b64ad3a1afc50d36f8c2f7 WHIRLPOOL ecee7ac064127d72cf085a44bebe558740d175dbb852fbca6f6d03ddc7ff0341cdb1f153b29fb784567bc400f01a4c3e2f684633fec007721960673dfec385bd
+EBUILD php-5.6.6.ebuild 22337 SHA256 42b11577986dbdb84aabf2b909a49b876f4dde9063d0b4e26549b7096f7dba13 SHA512 41a32f74a87b1c1526fbd1a3c7214f419bc8c6b3d2424fcc5b4e4e77b67d8e50e53dc8f90171460d1dc3f7698963a6efac81e2d4cb103d75a3ed2cab61e57f0e WHIRLPOOL dbb7b36554d04d0df6967ca114eac6dcfc8918531621d94e49652dbed021d4e1eb3f84e570ac57b68af5dc7ce8f59cc25e72409b6d90a40a1f1956c7c9fb3e52
+MISC ChangeLog 38706 SHA256 4eab64fbdee3aeb1b5404c0c5771f33bd5ee48cca064fe99349092f96d477183 SHA512 09a8b53c1d6b80c1dcded999be441d727eafe854f233b16b06b9fb3ac9321c53fa3fa9e555e1ad637fa3277c0e285305e211f5156d3477730680e8aeea330cac WHIRLPOOL bae383dc7b195e37ce98f777a363f0354e5bc6f1d4660dc4bb2620697a4c04490cfec5c2fdf571bd4e80b44a47b5d1dd3f1f4b7fd5a9b7659579095f9d95b318
 MISC ChangeLog-2012 108488 SHA256 c2eea36502d34eadc7995d546f78aaa553ba07beeb51ea738715ad7f2e51b08d SHA512 eb25224993eff1ea42ea133302991a3ffad3adda0bc524cfa4fae49574230a8e65b35b08750d780c11cc9c152435fadbf2c416241fac28dcbb025e060e96cd7a WHIRLPOOL 82f627853fa961f3f3707fb2c8757acbc8fc644e89121d78703b40ff0f668aa7d0f1aa26c77f8f503e4f6da22ed865e4cb7c02d5d112c89488b12aa6b0d80568
 MISC metadata.xml 1601 SHA256 0f0d69832d7bf8ca13c940247d67e184d866ae48f4f77167b3b6a508f4c0ebfe SHA512 744b80efb645e7c6e632101c98cb7bcaf2a6530d948e5cb320050cfe4ca3733e29b995e2b1e4677b648c7a9e051a8056c6f38ae03ae18656a9583b24c32b6056 WHIRLPOOL 8ba9c5edf403759541ea1aad65138f48ddc4e4bef73c3a43744e1d0513031ab431fe1e742a39125257c3545ae0a091118d1b36d04a28bdf96e9989185764ae50
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTuycsACgkQVWmRsqeSphN1EQCeO/Eo4QdCuOqcymGlOnggRSP/
-RVsAn2+c+ZuKb/RhnmJelvZcRnaa5mH/
-=YOH+
+iQIcBAEBCAAGBQJU9N/JAAoJEJIMDbyqvv1V6twP/Rmpk6g0BPoVRaHDDSvbg3AJ
+5kAgkKMZO5swHt4bC78+Os/vtbdK2vUgC14ggfBKv8N+yPhQnr9k/hIhEeMuL+Kr
+9a6WGkgcJpS7ZaX/CW+lYy/q4imesiF62SwOgU6GqIZcl263lv0ZCWTVH7L+5Q1r
+Jtd+M+yz0xO3cR83+1E34CDjfRwRvnFhLk8NXAu00fTrFRdzwE5vm4INjeA789x0
+x6jpfDjNRk4BOaN4Tb61ERBzZQidbwYEcwlos9o1xUtApv7Dbp+aOMTVNRJoc8rw
+2B/xmZl5YiZRtvJqik7rKSpzVU/RG4lbljWM/ziXO3T8zgnKkOu0R6eeyC068vCJ
+FISkHrtDXruUxHUsczMciu36OYbEJARzhQT1kxvjZMVFJDyaH9xo3r8Rcf4NcygL
+IkH5DcUnd0B6+n6Weu9gg6FU8FLbfBf4snzNPI3S0r9a7qJrWDR0hDYHIWkY5ryy
+CwZuxbpEUixtwtP3vl70cN8CjIWam7jDHoZ9xtoUvXnuiqa7bo64Vqh1McxDBd8+
+ils8ZVvzuLOMdKx9UF/4oRHoS0jMoLBECnoqrpHpoAM6GzHBQ5qEBcsSRvh6gvVs
+vZCu85umHlXCSULlgyitOsk5WtuwNRfpu2mFtsln4MbzyleUyYRSWMODimkzrmCb
+2WP/PgJZS5NCJdWV5YAo
+=CfW5
 -----END PGP SIGNATURE-----
