@@ -37,16 +37,26 @@ EBUILD spidermonkey-1.7.0-r2.ebuild 1664 SHA256 907e253f2519790d2ac48779637a557b
 EBUILD spidermonkey-1.7.0-r3.ebuild 1572 SHA256 de1569ec5891c4cee4826a71d5429a0bde31c92c15d4775fa97423f4a3da2c3d SHA512 5de735e964235a926173d7107deefd2872cbde2baa05055c9342a6f53b629494fc814d209574d90a76eb7f847002102fa1406d4e48a01e07cc7a812bd1f01c48 WHIRLPOOL e4ccf5cf6c69649b36c9fad11ebffc6fd743376c3f8ad8d6296acab0255171973536e9b41835e2c47def04dd8456904d0d2ee237a5a03dfc93651a80776b73fe
 EBUILD spidermonkey-1.7.0.ebuild 1432 SHA256 5df2e8917fce96363d2128a2fdafc623aa159e60682591b347201b062778a99e SHA512 54a1c28611b0c528bcf81fe7c1bd2022eb82e65643a7d7860351303e0bdabc037fcaa61dcd7aea34336c866d81f1e41f5cae2d22f8beb43a69c4838b38061d42 WHIRLPOOL fc36e8de029c989a56cf928ca9c2e448fca4fc21bcb4d5f72ba95f5a47ee71da37b1bf1b9fa33f2cd81b4ec041abc29b6d6b9ae21435123fa7921358f174412e
 EBUILD spidermonkey-1.8.2.15-r2.ebuild 1935 SHA256 0692bfde440a59188c6fe480e082bdeee74034f587357fcd9b30bea1f6fb7996 SHA512 ed381546fe2692c6246f8ae45ebec052a23af626f50b9e07ffcd8a78296c5264f522d6b00ff2dcb66fa72d973adc7801b22b4f8c9b416e77683699df8489022a WHIRLPOOL fa4eebd1ba81254f41d0ac4b09cf001928edc8995cba41f22e3f74eace138ca6f30d9b37acf71f8544bb9bbb05e89444481ade8b51d799d5d103b3c47ef59a42
-EBUILD spidermonkey-1.8.5-r4.ebuild 4010 SHA256 92127da6b4a5a2efb8dcfed7cbcfc52b3f026963409ed770a35ffc2b365d20d4 SHA512 e4e276f4b2895dd2babbd99659b34082936a1c788eb0640598c77bbbc03cefa310f7bbaf66bdbb18b404de884e4f83946e1dcb2ea6613787cb628f7d57a89af8 WHIRLPOOL d1b8c7719143a0c91093d875088d00b0fe249d12c29af53c8ba8d50adab460a5cc8496dbfb3259eebfd04de8390675c916c259ed8099dbf5e3662ee2c2bb2bb7
+EBUILD spidermonkey-1.8.5-r4.ebuild 4018 SHA256 6b0b3f9511f8be2a477c8bdac62784f3845be4f266d8a0d0deca3f65794aebdb SHA512 d24e8f7e1ba0c9017cbb42a699b418d98b28970b6e002caf2181687a39a307e0f027845cf1f36ffe0ce7081822e5bb94ba8b53f224dd523d82d93d0b1a0cdd76 WHIRLPOOL c09e2c58bc9527a60763d82e45f0ea3860c2b5e4cfa7913aa10cb8f388bd6fd82880374d3ca1dcbac98381242dbbf2bb87a36ea2bd92eb6712e33c981ec1b951
 EBUILD spidermonkey-1.8.7-r3.ebuild 3807 SHA256 85cfb138eab9d0dbf13b240d7f6972a7b4bd71266c6e68de4d9bbde0b11d384f SHA512 f4e6d27283f4c0052e3c88cafc237a802062ab5e945cbd9f82b7491f9120dab3eba670889d6cb2f1ad13debed3daec6c2752e29ab5d41499149dcdfd2a660195 WHIRLPOOL 13316f248ea613dc05b07994e026f8aa9752e47cb18261f80b44d483d9900bfe4efaffcded1c6806618fb3bfa49b5e28c16a1b7092b0f223ed144e17639392b6
 EBUILD spidermonkey-17.0.0-r3.ebuild 3541 SHA256 69644bf5a10849eb400cd1ce55eba99095cffb9fce88dc32b226400586b209dc SHA512 7a869e451e27522b361087eaa1390fc24ff06d711ec535359a4c6b9d17b420bc791c1baa0c6d122ca3ac27c2d8ab102ce6ca45ff00967497f4bf2a28c89b6db6 WHIRLPOOL 3447bfe0111b6b44fc5752f6bfbf2057a714d635c27ab9493a14035471d0d135aa7da960f698819f446eb4af6fb3ffadb64ddfa4902967b274620806ed169afa
 EBUILD spidermonkey-24.2.0-r2.ebuild 4002 SHA256 423fe6313438743a032423fd54f8158c793abbd5f2e4e261f99d54d1bd2e6153 SHA512 4a466f7e82d0147d015bb91a74a66e1693500fc8f7d828d02ea1826e3e49d44a6aafea3d265385503487e2fd34823ec4bd037314e8ff7874d3bbdbbe2b263fa0 WHIRLPOOL 08472b64582422ec8f07aa46a76dc20930650416cab586912a1f528329a49dd35aa8fda834eba14d3eb9bb5a8489b5f6d67b67348a27af942060a13656807b87
-MISC ChangeLog 25461 SHA256 51e9eb806c18c9ee5a82e25885b4b0a570af6789f21daee79e590483c64840b6 SHA512 3e4922d93e1b58268acc8ae1d8053b2fb506fa5401732fd1e24a8682c74647e4884338fb62ab87f4fd6f3dca49ae4d3a59e1ba96156e4ba1b28742dc37bcead8 WHIRLPOOL 55ec28b5b53e7406350e7f31a5f6f78b750e95d0b069e50414a035f83d921673be6122895d5d4df2d3e597722b760509c4a145f71d4d29d25d12451ad60ab8e5
+MISC ChangeLog 25577 SHA256 abb82f44895609e2a481336870ddd3f0671f048c1135aa682d94eac1895d30d4 SHA512 726bd45e67eef8319d4af8a6c193540e68a3332795da745ca59f6b342d7df8b60cca6201d2b10ebce970edd829be3fe5b4fe03870d5cdffdb7a2e6117ab14e8b WHIRLPOOL e25f3c2190be125c3962f2019839a88d6bb3ae040a6f83e67fb4a6b67000191516d29b99dfbad34fe3cadb478466d8c857f5e8e95ef0bc813194c524d4d49fba
 MISC metadata.xml 666 SHA256 c7c78c882b67a3f4c72a6cefcd83abe58f8fcecd9e5dfdec7ddb133b64a85f8f SHA512 3a94dc13bf8f417d2f760a18765a58e7d8118ceb52b90ef3ae646830d745d10e5e09d7b60828b27381d16c8008c0c1dd00fa0a88e9a447d45cf76312b780f12e WHIRLPOOL 34e73fb374d36c0e29d6ea472c3e9751b42bc1cd061b795b56efd9df3021cc27d7f00beb971adfee8785016b9d24575228bc8d2de985fbc49c36596962bbb2de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF0EAREIAAYFAlQq5M8ACgkQ2ugaI38ACPDImQEAkbpBy/n9+MFkMfjSOWLxqGBv
-6BXxSka+qeuu+75uSiMA+MvIecvtdruXbYOEHphmbKHvzA0vGcmb64uk3B/Mr4U=
-=0DvK
+iQIcBAEBCAAGBQJU9OAVAAoJEJIMDbyqvv1VoQYQAO+UoFbRkTfgjULKF6XJEYAz
+KRzt2ztsKh303Pt1hnnwOC9/zUG6/d1Lzi6KcLysh/JRlOjYkuiqj2ZwJn5uq5r9
+uYgkTTVXHeYHStkP0qtlRvT7Auw2BGRIGZvBjH8rR8exzfCSJw0J5Iq3NxFDqqeb
+qMdhQwpEtf16+toP9Y7a8QI9EDvdqBHBvFU+M015M7lNPrAFxmsDXTJaZD9Hz85a
+qXgS/M/qtvWos/4JsbpkdUChnpYXB0qvEgEVCgI87C3b595/NB2hhlvWiY1M/gV6
+SIa5n41Y01VgCJlXp/o2JQ6FGlCMLR3vR3mZuxstXvJahTWrWaGPoHbFe7ReMxvv
+qN5pzWA92HQm/gQeDNZrVVDYsiJIxvxeOMTm1oZng92jiX9Inz4M5OVdWnwP4d77
+y6LG2fZ2RIdmWeWdkHdcr57RLiC7FVwtLWtgeFZzH8n1kO/1e90TWerRW1FvBJ1/
+qCB8ssq8nArpWXZxtLxwaE9kpbyzSlZkcBNOIoLGZLIy8Fxc32WyjQsu5GQQypOp
+OkE73AX44M0VrkGL1IHSxJ6RVzRFAC5ZoaSvd1RxxXuyDQ/Dx4tjl2djL/eu3zhS
+k7blXEd6svmcaK4L2UgMs5n07aUqfA+x46J0zTl8L/g7s6Qiewy1RDu3IHj0OMw/
+m182XJ3xCMoQIc9ODN3Z
+=NtmL
 -----END PGP SIGNATURE-----
