@@ -4,19 +4,25 @@ Hash: SHA256
 AUX yasm-1.2.0-fix_cython_check.patch 790 SHA256 1d44a5ea34426c84556e93d3f5774912ca8530c582ad6f1bf738850b515d977c SHA512 5055949c13c5b4e24863f302f379831fcb26edbcfef48b3f3ee4fe742a95c0db85487a82d72a7e9fc96ad4c9fbeee0423d79032269900aeaf380cc9848ccb07b WHIRLPOOL 8810880f15c5c44cbf457ede3e0d19ef64ba68ae2cb3f595b04be1614b39f36d7803c617d29e3a2fe7248ac76285056f1ea4f1870a28b75c1da8c851827b9e22
 DIST yasm-1.2.0-x32.patch.xz 9656 SHA256 d5a623243b1b2a73b4b25d9395a5be1483adca38cec8f50a7f1e4e9107cd9d83 SHA512 93961d0690c0018a3645bc3d610b1f12172f5311609716fec0efcf8af5d70578a1fc74ab42fcc75f2b75ed8837fa03cbc66ddd6386baeb56a519e7639ff64874 WHIRLPOOL 410c940995fc31b2e12f9eec67b6873f1f4629fcdf8a58c2165ab3d9721f21e295901e8917cfd613b30ea319594aeaff21d38ec4e9bd2b693e6e3230e9d637d9
 DIST yasm-1.2.0.tar.gz 1436502 SHA256 768ffab457b90a20a6d895c39749adb547c1b7cb5c108e84b151a838a23ccf31 SHA512 e80ace766e145f6486e76da1a5a9819221b7f406745a02529b4ad220ef7f51ddd67f23d0d8b187bffc9725d9f9742ae5f3a0bb23ee5b2a61153332fb3e286b77 WHIRLPOOL 2a1fd73beeea8128c67e0172684e3dac9d0c16b9e35e905a5e313948d685da9ace15a2b18001c02c0aff9113fec9059af5984aeacf8e4ae5e8bbe91dd00d9d9e
-EBUILD yasm-1.2.0-r1.ebuild 1440 SHA256 dcabdb3af0ac9e748b0a21ac23c7393c7a6552adef2f9b943285be5f917e6190 SHA512 8a153cbeae3fb52936ab9b46e167c8bdb13e20ed0088cfc9b7bc9957b834bbb697187cd8cb9ca8afe6f173f5d041a641407e81fc872425d88f24a327518787b5 WHIRLPOOL 887deecb8264937ce5bbaa59b4f67c0bdf4524962fdda09bdf7c1d1ce699fd32edaa98c81fdc42237717b2554802cc477183411c54e30f5a1709e3c7b9ec22e9
+EBUILD yasm-1.2.0-r1.ebuild 1445 SHA256 b6c880ecec7fe8a65bc7dab87369b4110cf529476b95ec6c91cb9714b63aafd0 SHA512 b1c69a739121848bff4de2505eabd43d8d61ba7586e757ac930151effc4609c7378e7d39d780d152693876022758c381486e3a916afbf76f7f646e7ca1b7556b WHIRLPOOL 3c8ec111fb307a9c759bc0719e13a7df434c07934619ffee323a66f263d2936003ae3b7fb3a5c2f4b93733a17f435ef9dcc1620476deeb4af5a00fc591044610
 EBUILD yasm-1.2.0.ebuild 1171 SHA256 d881b284ddabf55d8915e0bcdf48e95c2cc43a80a20f49ad43778265c538b15e SHA512 c198a3b1d8506f8cadb14880cc265d4977b18f8884a9fafd7ce01a262e70269da8cedc981ba0582bc20631ce982e42487d4d8940dce695ebac0e6069380753f0 WHIRLPOOL b5718cb617dd4997ca4fcfa02cc047cef3884a02d2ab35eb3a00f0fbb2b785897b16a069253d7a19a86c3df067bcd9cfd45cfd93a90c5277ea60032289c6f426
 EBUILD yasm-9999.ebuild 1674 SHA256 1971f4feb5ce7354fbf79c3e0038f05e1d38e945264bc427189a4a9a2109d6ae SHA512 807c1fe3e82474ecd658bca8c685add52d7414a79e42fac025a2ed83cb32cb23b86aaf83a4f5fa4fda7733344a22544a36c02f05774bd2eb01c54ca1ca7d118c WHIRLPOOL 8f2cb331de6eba6833375ccc9b8337a006fab14a10839449521c7c39b09253f7439c1aeaa67a8378126fdc1a760c933a20f8c66dc32b1fda7d77247843ff85d5
-MISC ChangeLog 8380 SHA256 149ba28761ff0649d47aa13eeb37a52866601f4001432f9fc1debbc705f078f2 SHA512 ae7ce53f862f25856fd87666332c9f8f77d978a2e19c3df4a49032dbdfaee71edcccdc6b813fca1757a9bb8e7ccc7cff3c368351221f343a47ce586ff2a46f3f WHIRLPOOL 51421291d17de06295b0dac99df6db8079f3865bb304d0cb9be77ac2ad9a28b88a3f809cf796b68011085d7c17be6aa9e0e2b31c5d50b73a8df8910a34579c18
+MISC ChangeLog 8485 SHA256 46aff76c47384de0bc0655682676c851c022f5ee11e48800edd74f92230a9123 SHA512 225c90c25e1fd4ab89aebce66ec96bb11b39df2fbd8cecb225a5ece083d9bbedb8a12b7ef3e84a3b6a9a4c9dd2eeb9e949e987cbae3e4c38dc167edf4eb1404c WHIRLPOOL 6217fed1ef8d114ed1c21dc0ed304c124b2eb5631964462d80679159bcecef17da2684e4cd22177fb0b0c62483907dac9240ff10a20d5d2bd4f073f953c2350d
 MISC metadata.xml 270 SHA256 ef58b1c4316d37bc29175e278d9664a16eb45869f908eb692acbd6e6f97e7da2 SHA512 4213dec88a84cec39d4c8f02271b0ce690cbf5c26f50a887b733f81d0f02f229ab163d7f24dd868cb16d9ce5533d8c64c980acbb6539bb009936e924e6d8b775 WHIRLPOOL be21a72d5149eb429a30ca933bbe6f97d924f13241b6368ee793b8a930d0338bc79e2b22b8ee2e9fba2f5c844016b73f211cad0ecabe6cfa8730870c84d7ae9f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTxVnZAAoJEA2sAkrWKOU2UPkH/i4ozlXc79Ds0o04c5d34k7W
-Mz0woQ3uaCX+NoILZSYeyycsPhC9M7QEICuZpmj0BzYgaAXqRA4hruFvAslz91Q+
-WjqnkU7sXksVvNB937BU+sEPrNpRK7hxVmpfPTKqweXZ7amHiUsWLG0NBPWWGMpH
-GL6zCz5HJHqal5/bpPp+ldBLPQ6gpY3q1uM8uXgNU5Juf3pZ5MleQFrzOdddA4+Q
-wgpvHU9CSfKaRvYlZgeALVtSNUFSGdLwNE4WFgksy+kUQY0ZEQEmi0TDoyKjK/Et
-cuTUfOR5zf52cWTbvW3YTG1Pa4a7kA/qFFehDW5ps97SRHvWw+w3yZErz9vusBM=
-=cmce
+iQIcBAEBCAAGBQJU9OBDAAoJEJIMDbyqvv1VHGIP/1pqQ+ZJEi6hSJZq7WYI/0Bj
+Hw/0SBGxXLb7vannBJzPrDWMJkPOqUurOjO9IixXozmwHUMYMACcA9RTCi0r1/m0
+OJoCZLkYPMURZklHHOijka5B/OPxS9aoPe7EvMCOmY9f4YCmJGo1gE3xsj3Y3aVf
+kLOk+aGXyrVugWGeu2k2YnYMToSbbORU1XXT3sn0/ESXqUcbbVIgJuWEqbahAh8U
+niNCSZa7rKFj+mbfyk5kBXvizXLGv/KYTPzBhYru6gNt3nGedi+roMckiopjjiBO
+//OtYAZAII0X3iJRp2tMvY/INhi3UQpPDQ6NZygauKI7h1h6iK9PYBMu8S+V0OLK
+YGGIO4vFqR0pOAmqpthVhNxm80NbIWgAiF21XZDP4fr1B+rLjcPnde8GCOoWLu1p
+Ma22PJbK4kliMO3dHbUxoCK66Na+t/KMsBk+ETH2m4WyhxEQsoqHO3aMta+6eeUZ
+zWPiSGJPCaejxWLrfNkNHQ9dzBqiT0JKgbTdeu8OgEb80WTuEnq6dcjzDcwSmCOv
+Fr+lPKNeZjIlMxtiF/LcIN0l7WRaTztV97bRDLOW5iMSTLaBm6DIZd/c/grNxGFj
++zUi1fZzN3mFvgDQAdF/Mo0035hww0g8X0tmoZHAp9pqaR7e4klMBtZiryL/GYpZ
+/hCee4yn/hKLimeTRR0j
+=sKx0
 -----END PGP SIGNATURE-----
