@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/yasm
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/yasm/ChangeLog,v 1.65 2014/07/15 16:40:51 nimiux Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/yasm/ChangeLog,v 1.66 2015/03/03 06:13:53 dlan Exp $
+
+  02 Mar 2015; Yixun Lan <dlan@gentoo.org> yasm-1.2.0-r1.ebuild:
+  add arm64 support, tested on A53 board
 
   15 Jul 2014; Chema Alonso <nimiux@gentoo.org> yasm-1.2.0-r1.ebuild:
   Stable for amd64 wrt bug #509944
