@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.934 2015/02/26 07:22:49 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.935 2015/03/03 06:11:48 dlan Exp $
+
+  02 Mar 2015; Yixun Lan <dlan@gentoo.org> php-5.6.6.ebuild:
+  add arm64 support, tested on A53 board
 
   26 Feb 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.38.ebuild,
   php-5.5.22.ebuild:
